5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1630_2941.log
== TEST (2019-04-02 16:14:04) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(Vf, 2))
NameError: name 'Vf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:37) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(Vf, 2))
NameError: name 'Vf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:48) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi(1 + j)**n
print(round(Vf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Vf=Vi(1 + j)**n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:20) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi(1 + j)**n
print(round(Vf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Vf=Vi(1 + j)**n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:45) 
-- CODE:
Vf=Vi(1 + j)**n
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Vf=Vi(1 + j)**n
NameError: name 'Vi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:11) 
-- CODE:
vf=int(input("valor final: ")
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf, 2))

-- ERROR:
File "XXXX", line 2
    Vi=int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:19:13) 
-- CODE:
vf=int(input("valor final: ")
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf, 2))

-- EXECUTION TIME:
0.121989
-- ERROR:
  File "/home/codebench/codes/1630/2941/main.py", line 2
    Vi=int(input())
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:13) 
-- CODE:
vf=int(input("valor final: ")
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf, 2))

-- ERROR:
File "XXXX", line 2
    Vi=int(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:44) 
-- CODE:
Vf=int(input("valor final: "))
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Vi=int(input())
ValueError: invalid literal for int() with base 10: '0.009'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:20:18) 
-- CODE:
Vf=int(input("valor final: "))
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf, 2))

-- EXECUTION TIME:
0.158481
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2941/main.py", line 2, in <module>
    Vi=int(input())
ValueError: invalid literal for int() with base 10: '0.009'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:20) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

Vf=Vi(1+j)**n
print(round(Vf, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Vf=Vi(1+j)**n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:31) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

int(Vf=Vi(1+j)**n)
print(round(Vf, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    int(Vf=Vi(1+j)**n)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:39:20) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

Vf=Vi(1+j)**n
print(round(Vf, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Vf=Vi(1+j)**n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:20) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf=Vi(1+j)**n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(Vf=Vi(1+j)**n))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:24) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf=Vi(1+j)**n))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(Vf=Vi(1+j)**n))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:08) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(Vf=Vi(1+j)**n)round(Vf, 2)

-- ERROR:
File "XXXX", line 5
    print(Vf=Vi(1+j)**n)round(Vf, 2)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:47) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf, 2(Vf=Vi(1+j)**n)

-- ERROR:
File "XXXX", line 6
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:02) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(Vf,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Vf,2)
NameError: name 'Vf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:44) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(Vf,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Vf,2)
NameError: name 'Vf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:44:04) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf,2)

-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:15) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi(1 + j)**2
print(round(Vf,2)

-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:28) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi(1 + j)**2
print(round(Vf,2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:45) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi(1 + j)**n
print(round(Vf,2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:42) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi(1+j)**n
print(round(Vf,2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:49:10) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi*(1+j)**n
print(round(Vf,2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:49:43) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi*(1+j)**n
print(round(Vf,2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:51:17) 
-- CODE:
Vf=Vi*(1+j)**n
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))

print(round(Vf,2)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:55) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi*1+j**n
print(round(Vf,2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:56) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi*1+j**n
print(round(Vf,2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:56) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi*1+j**n
print(round(Vf,2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:54:32) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi*1+j**n
print(round(Vf,2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:55:13) 
-- CODE:
Vi=int(input("valor inicial: "))
j=float(input("taxa de juros: "))
n=int(input("numero do investimento: "))
Vf=Vi*(1+j)**n
print(round(Vf,2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
